{
    "version": 1,
    "name": "InutAction_Camera",
    "maps": [
        {
            "name": "Default",
            "id": "e841aaa3-35e1-4d1a-8c12-eee83ea517c7",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "0a92bdca-f589-43c6-b98d-76bdf4b4c9af",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ToggleCameraPerspective",
                    "type": "Button",
                    "id": "db3de780-9fe3-4cd0-b5b4-ed2dc1310e64",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cdbc4318-7ddd-4cd3-bbf0-f9685d94d05e",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f407e3f0-1c29-4e8c-ba44-102920288bea",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleCameraPerspective",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}