{
    "version": 1,
    "name": "InutAction_Player",
    "maps": [
        {
            "name": "Default",
            "id": "e841aaa3-35e1-4d1a-8c12-eee83ea517c7",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "86265200-7e64-4c2e-8163-7b3c4e2d2a4d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "8c6b2edf-6d7b-4262-ad20-a01c2c0b8dac",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "46832790-1adb-4bf8-ab8d-5d5953e91a2c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "ab24a6de-a428-4f6a-825b-0fcb946765af",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "2373f180-cc2e-4dc9-a577-d55e6075d244",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseMouse",
                    "type": "Button",
                    "id": "9d64f643-257c-47db-a406-2df0ff07dd79",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Num1",
                    "type": "Button",
                    "id": "5a558ec0-0176-4384-a93e-211165d4b6f3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Num2",
                    "type": "Button",
                    "id": "cdf8cd09-d099-4fd5-86c4-152a3d2ed075",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Num3",
                    "type": "Button",
                    "id": "74274f8a-8f48-4416-872d-fa4929e41dbf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Num4",
                    "type": "Button",
                    "id": "a688f786-f3fc-4d16-923d-327a16bb3c7a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "0391b70b-feb0-42b1-874a-f38cb9cdcc99",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4ad94bde-4346-4a97-a7c1-e5494453d741",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "873fa438-6dbd-45ed-bc0c-73c2de82217f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "49074fdd-da6e-48f7-93ba-030fc88f8200",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7ff131a3-e2df-4e5c-8a12-3eb968db7bc5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "f31b6d97-8d88-4abe-8c1a-e9ec4289903d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7f6d12e0-5002-47ac-9fc1-dcaf8082b332",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f2c8ee1f-2740-4340-b017-5f5d95857e10",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1db37930-e6b4-4329-8d21-4f2bd72d16b5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3c91c134-2857-4c38-a7a2-785dcb290c07",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "84919529-c281-40e1-9fb2-f655511fadd7",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b092bf2c-7e81-44f3-b67c-383113980848",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff5b4abf-bec9-4a40-9e77-8b33f88036bb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e08124e-7ba6-4e09-857c-2a0239312dfc",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "184cfb2d-fc76-43cc-9487-6e4bceac9485",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0983ae0b-d212-45dc-8b73-b8fd554f1997",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a47703b1-c34b-4818-a873-cc220b7fbace",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5469df9-2db2-4bf1-8966-a3e0d973e474",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c66a5e7e-25c9-4a4a-9f59-da3508dd758c",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UseMouse",
            "id": "571a2f7a-10b7-4a5b-a4a1-9893fd6e1a4e",
            "actions": [
                {
                    "name": "UseMouse",
                    "type": "Button",
                    "id": "c26b75a0-7c57-446e-9159-e3fced99581b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseLeft",
                    "type": "Button",
                    "id": "ba84edd8-c8d8-491f-a2f0-b2088621668a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8e385b03-7c53-4364-b276-07a3c05adfec",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cf6b5cd-7638-448c-8f07-c6ab8a95a3b4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "NumKey",
            "id": "ca75d68c-1b34-4f96-8031-79f7d8395361",
            "actions": [
                {
                    "name": "Num5",
                    "type": "Button",
                    "id": "00c3f305-c9c1-47af-8d83-0b972d180af2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Num6",
                    "type": "Button",
                    "id": "dc783c36-00f4-4b5a-a147-5c1535764a65",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Num7",
                    "type": "Button",
                    "id": "643e65bb-652f-43c7-8ead-7b7e6cc09ead",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Num8",
                    "type": "Button",
                    "id": "6ccf6a12-8f84-455a-99b2-1da2526834bc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Num9",
                    "type": "Button",
                    "id": "c660735e-d11b-4cd9-af5a-dde68c2ea021",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Num0",
                    "type": "Button",
                    "id": "16e1f561-93c7-4088-9480-90bba2478081",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "36f86487-b563-4763-ab6a-2bf7ea3baf89",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6e9d39c-d2f9-4088-b62e-410e6cbb1b96",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "babeed1c-bbd5-426d-bf14-035a80da5047",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39fe3e9f-c0a2-4e92-b61d-1cc6c55d6ca7",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "278e6f33-bfcd-4f50-be6b-97fdc7450055",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "572f771d-30a8-4825-933a-0895a84602df",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num0",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}