//쓸래말래 쓸래말래
public enum EInputActionAssetName
{
    Player,
    Camera,
    UI,
    Common,
    
}

public enum EInputMapName
{
    Default,
    UseMouse, 
}


public enum EPlayerInputActionName
{
    Move,
    Jump,
    Interaction,
    Attack,
    Dash,
    UseMouse,
    MouseLeft,
}

public enum EUseMouseInputActionName
{
    UseMouse,
    MouseLeft
}

public enum ECameraInputActionName
{
    Look,
    ToggleCameraPerspective,
}

public enum EUIInputActionName
{
    Inventory,
}